--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   ],
   "require": {
     "liip/functional-test-bundle": "~1.6",
+    "guzzlehttp/psr7": "~1.3",
     "coduo/php-matcher": "~2.0"
   },
   "require-dev": {},
