--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "liip/functional-test-bundle": "^1.6",
     "doctrine/orm": "^2.5",
     "doctrine/data-fixtures": "^1.2",
-    "symfony/console": "^2.8|^3.0",
+    "symfony/console": "^3.0",
     "guzzlehttp/psr7": "^1.3",
     "phpunit/phpunit": "^5.7",
     "coduo/php-matcher": "^2.1"
