--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "doctrine/data-fixtures": "^1.2",
     "symfony/console": "^3.0",
     "guzzlehttp/psr7": "^1.3",
-    "phpunit/phpunit": "^5.7|^6.0",
+    "phpunit/phpunit": "^6.0",
     "coduo/php-matcher": "^2.1"
   },
   "require-dev": {},
