Fix do not allow liip/functional-test-bundle 1.7.1 because of BC break

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "require-dev": {},
   "conflict": {
-    "liip/functional-test-bundle": "^1.7.1"
+    "liip/functional-test-bundle": "1.7.1"
   },
   "suggest": {
     "lstrojny/phpunit-clever-and-smart": "To run failed tests at the beginning"
