--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "liip/functional-test-bundle": "1.7.1"
   },
   "suggest": {
+    "ext-imagick": "To assert images",
     "lstrojny/phpunit-clever-and-smart": "To run failed tests at the beginning"
   },
   "autoload": {
