--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "doctrine/data-fixtures": "^1.2",
     "symfony/console": "^3.0|^4.0",
     "phpunit/phpunit": "^6.1",
-    "coduo/php-matcher": "^2.1"
+    "coduo/php-matcher": "^2.1",
+    "mikey179/vfsStream": "^1.3"
   },
   "require-dev": {},
   "conflict": {
