--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
-    "squizlabs/php_codesniffer": "^3.2"
+    "squizlabs/php_codesniffer": "^3.3",
+    "doctrine/coding-standard": "^4.0"
   },
   "conflict": {
     "liip/functional-test-bundle": "1.7.1"
