--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   "require-dev": {
     "roave/security-advisories": "dev-master",
     "squizlabs/php_codesniffer": "^3.3",
-    "doctrine/coding-standard": "^4.0"
+    "doctrine/coding-standard": "^4.0",
+    "symfony/framework-bundle": "^3.3"
   },
   "conflict": {
     "liip/functional-test-bundle": "1.7.1"
