--- a/composer.json
+++ b/composer.json
@@ -11,25 +11,28 @@
   ],
   "require": {
     "php": "~7.1",
-    "liip/functional-test-bundle": "^1.6",
+    "liip/functional-test-bundle": "^1.9",
     "doctrine/orm": "^2.5",
     "doctrine/data-fixtures": "^1.2",
-    "symfony/console": "^3.0|^4.0",
     "phpunit/phpunit": "^7.0",
-    "coduo/php-matcher": "^3.0",
-    "mikey179/vfsStream": "^1.3"
+    "coduo/php-matcher": "^3.1"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
+    "symfony/console": "^3.4|^4.0",
+    "symfony/security-acl": "^2.8|^3.0",
+    "symfony/framework-bundle": "^3.4",
+    "mikey179/vfsStream": "^1.6",
     "squizlabs/php_codesniffer": "^3.3",
     "doctrine/coding-standard": "^4.0",
-    "symfony/framework-bundle": "^3.3"
-  },
-  "conflict": {
-    "liip/functional-test-bundle": "1.7.1"
+    "phpstan/phpstan": "^0.10",
+    "phpstan/phpstan-phpunit": "^0.10",
+    "phpstan/phpstan-strict-rules": "^0.10"
   },
   "suggest": {
-    "ext-imagick": "To assert images and create fixture images"
+    "ext-imagick": "To assert images and create fixture images",
+    "symfony/console": "To use command line tool to generate tests stubs",
+    "mikey179/vfsStream": "To mock uploading large files"
   },
   "autoload": {
     "psr-4": {
@@ -45,8 +48,10 @@
     "cs-check": "vendor/bin/phpcs -p",
     "cs-fix": "vendor/bin/phpcbf -p",
     "phpunit": "vendor/bin/phpunit",
+    "analyse": "phpstan analyse --configuration=phpstan.neon src/ tests/ --level 5",
     "test": [
       "@cs-check",
+      "@analyse",
       "@phpunit"
     ]
   },
