--- a/composer.json
+++ b/composer.json
@@ -11,27 +11,32 @@
   ],
   "require": {
     "php": "~7.1",
-    "liip/functional-test-bundle": "^1.9",
-    "doctrine/orm": "^2.5",
-    "doctrine/data-fixtures": "^1.2",
+    "ext-json": "*",
+    "dama/doctrine-test-bundle": "^5.0",
+    "doctrine/orm": "^2.6",
+    "doctrine/data-fixtures": "^1.3",
+    "doctrine/doctrine-fixtures-bundle": "^3.0",
     "phpunit/phpunit": "^7.0",
-    "coduo/php-matcher": "^3.1"
+    "coduo/php-matcher": "^3.1",
+    "symfony/browser-kit": "^3.4 || ^4.0",
+    "symfony/css-selector": "^3.4 || ^4.0"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-master",
-    "symfony/console": "^3.4|^4.0",
-    "symfony/security-acl": "^2.8|^3.0",
-    "symfony/framework-bundle": "^3.4",
+    "symfony/console": "^3.4 || ^4.0",
+    "symfony/security": "^3.4 || ^4.0",
+    "symfony/framework-bundle": "^3.4 || ^4.0",
     "mikey179/vfsStream": "^1.6",
     "squizlabs/php_codesniffer": "^3.3",
     "doctrine/coding-standard": "^4.0",
     "phpstan/phpstan": "^0.10",
     "phpstan/phpstan-phpunit": "^0.10",
-    "phpstan/phpstan-strict-rules": "^0.10"
+    "phpstan/phpstan-strict-rules": "^0.10",
+    "lexik/jwt-authentication-bundle": "^2.5"
   },
   "suggest": {
     "ext-imagick": "To assert images and create fixture images",
     "symfony/console": "To use command line tool to generate tests stubs",
+    "symfony/security": "To mock authentication",
     "mikey179/vfsStream": "To mock uploading large files"
   },
   "autoload": {
