--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache:
 php:
   - 7.1
   - 7.2
+  - 7.3
 
 before_script:
   # Install Imagick
@@ -23,7 +24,7 @@ matrix:
 
 install:
   - travis_retry composer self-update
-  - travis_retry composer update ${COMPOSER_FLAGS} --prefer-source --no-interaction
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction
 
 script:
   - composer test
