--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,3 +10,4 @@ parameters:
         - '#Call to method Imagick::getimageblob\(\) with incorrect case: getImageBlob#'
         - '#Call to method Imagick::readimageblob\(\) with incorrect case: readImageBlob#'
         - '#Call to method Imagick::compareimages\(\) with incorrect case: compareImages#'
+        - '#Variable property access on object\.#'
