--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
     }
   ],
   "require": {
-    "php": "~7.1",
+    "php": "~7.2",
     "ext-json": "*",
     "dama/doctrine-test-bundle": "^5.0",
     "doctrine/orm": "^2.6",
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.1",
-    "phpunit/phpunit": "^7.5",
+    "phpunit/phpunit": "^7.5 || ^8.0",
     "coduo/php-matcher": "^3.1",
     "symfony/browser-kit": "^3.4 || ^4.0",
     "symfony/css-selector": "^3.4 || ^4.0"
