--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": "~7.2",
     "ext-json": "*",
-    "dama/doctrine-test-bundle": "^5.0",
+    "dama/doctrine-test-bundle": "^5.0 || ^6.0",
     "doctrine/orm": "^2.6",
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.1",
@@ -22,6 +22,7 @@
     "symfony/css-selector": "^3.4 || ^4.0"
   },
   "require-dev": {
+    "ext-imagick": "*",
     "symfony/console": "^3.4 || ^4.0",
     "symfony/security": "^3.4 || ^4.0",
     "symfony/framework-bundle": "^3.4 || ^4.0",
