--- a/phpstan.neon
+++ b/phpstan.neon
@@ -11,3 +11,4 @@ parameters:
         - '#Call to method Imagick::readimageblob\(\) with incorrect case: readImageBlob#'
         - '#Call to method Imagick::compareimages\(\) with incorrect case: compareImages#'
         - '#Variable property access on object\.#'
+        - '#Call to function method_exists\(\) with Symfony\\Component\\Config\\Definition\\Builder\\TreeBuilder#'
