--- a/phpstan.neon
+++ b/phpstan.neon
@@ -12,3 +12,5 @@ parameters:
         - '#Call to method Imagick::compareimages\(\) with incorrect case: compareImages#'
         - '#Variable property access on object\.#'
         - '#Call to function method_exists\(\) with Symfony\\Component\\Config\\Definition\\Builder\\TreeBuilder#'
+        - '#Class Symfony\\Component\\Config\\Definition\\Builder\\TreeBuilder does not have a constructor and must be instantiated without any parameters#'
+    reportUnmatchedIgnoredErrors: false
