--- a/phpstan.neon
+++ b/phpstan.neon
@@ -11,3 +11,6 @@ parameters:
         - '#Call to method Imagick::readimageblob\(\) with incorrect case: readImageBlob#'
         - '#Call to method Imagick::compareimages\(\) with incorrect case: compareImages#'
         - '#Variable property access on object\.#'
+        - '#Call to function method_exists\(\) with Symfony\\Component\\Config\\Definition\\Builder\\TreeBuilder#'
+        - '#Class Symfony\\Component\\Config\\Definition\\Builder\\TreeBuilder does not have a constructor and must be instantiated without any parameters#'
+    reportUnmatchedIgnoredErrors: false
