Added phpunit extension to update rest request fail test expected output file

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
     {
       "name": "Dragos Protung",
       "email": "dragos@protung.ro"
+    },
+    {
+      "name": "Cezary Stępkowski",
+      "email": "cezary.stepkowski@protonmail.com"
     }
   ],
   "require": {
