--- a/phpstan.neon
+++ b/phpstan.neon
@@ -11,7 +11,7 @@ parameters:
         - '#Call to method Imagick::readimageblob\(\) with incorrect case: readImageBlob#'
         - '#Call to method Imagick::compareimages\(\) with incorrect case: compareImages#'
         - '#Variable property access on object\.#'
-        - '#Speicher210\\FunctionalTestBundle\\Constraint\\ResponseStatusCodeSame::__construct\(\) calls parent constructor but parent does not have one#'
+        - '#Speicher210\\FunctionalTestBundle\\Constraint\\[a-zA-Z0-9\\]+::__construct\(\) calls parent constructor but parent does not have one#'
         - '#Call to an undefined static method PHPUnit\\Framework\\Constraint\\Constraint::__construct\(\)#'
         - '#Call to function method_exists\(\) with #'
         - '#Class Symfony\\Component\\Config\\Definition\\Builder\\TreeBuilder does not have a constructor and must be instantiated without any parameters#'
