Dropped support for PHPUnit < 8

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -11,11 +11,6 @@ parameters:
         - '#Call to method Imagick::readimageblob\(\) with incorrect case: readImageBlob#'
         - '#Call to method Imagick::compareimages\(\) with incorrect case: compareImages#'
         - '#Variable property access on object\.#'
-        - '#Speicher210\\FunctionalTestBundle\\Constraint\\[a-zA-Z0-9\\]+::__construct\(\) calls parent constructor but parent does not have one#'
-        - '#Call to an undefined static method PHPUnit\\Framework\\Constraint\\Constraint::__construct\(\)#'
-        - '#Call to an undefined static method Speicher210\\FunctionalTestBundle\\Constraint\\ResponseContentConstraint::__construct\(\)#'
-        - '#Call to function method_exists\(\) with #'
+        - '#Call to function method_exists\(\) with Symfony\\Component\\Config\\Definition\\Builder\\TreeBuilder#'
         - '#Class Symfony\\Component\\Config\\Definition\\Builder\\TreeBuilder does not have a constructor and must be instantiated without any parameters#'
-        - '#Call to an undefined static method PHPUnit\\Framework\\Constraint\\Constraint::exporter\(\)#'
-        - '#Method Speicher210\\FunctionalTestBundle\\Constraint\\ResponseHeaderSame::evaluate\(\) has parameter \$[a-zA-Z]+ with no typehint specified#'
     reportUnmatchedIgnoredErrors: false
