--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "doctrine/orm": "^2.6",
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.1",
-    "phpunit/phpunit": "^7.5 || ^8.0",
+    "phpunit/phpunit": "^8.0",
     "coduo/php-matcher": "^3.1",
     "symfony/browser-kit": "^3.4 || ^4.0",
     "symfony/css-selector": "^3.4 || ^4.0"
