--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,14 @@ before_install:
   - pear config-set preferred_state beta
   - pecl channel-update pecl.php.net
   - yes | pecl install imagick
-
+  - if [ "$SYMFONY_VERSION" != "" ]; then composer --no-update require --dev symfony/framework-bundle:${SYMFONY_VERSION}; fi;
 matrix:
   fast_finish: true
   include:
     - php: 7.2
       env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest"
+    - php: 7.2
+      env: SYMFONY_VERSION='4.2.*'
 
 install:
   - travis_retry composer self-update
