--- a/composer.json
+++ b/composer.json
@@ -20,22 +20,25 @@
     "doctrine/orm": "^2.6",
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.1",
-    "phpunit/phpunit": "^7.5 || ^8.0",
+    "phpunit/phpunit": "^8.0",
     "coduo/php-matcher": "^3.1",
-    "symfony/browser-kit": "^3.4 || ^4.0",
-    "symfony/css-selector": "^3.4 || ^4.0"
+    "symfony/browser-kit": "^3.4 || ^4.2",
+    "symfony/css-selector": "^3.4 || ^4.2"
   },
   "require-dev": {
     "ext-imagick": "*",
-    "symfony/console": "^3.4 || ^4.0",
-    "symfony/security": "^3.4 || ^4.0",
-    "symfony/framework-bundle": "^3.4 || ^4.0",
+    "symfony/console": "^3.4 || ^4.2",
+    "symfony/security": "^3.4 || ^4.2",
+    "symfony/framework-bundle": "^3.4 || ^4.2",
     "mikey179/vfsstream": "^1.6",
     "doctrine/coding-standard": "^6.0",
-    "phpstan/phpstan": "^0.11",
+    "phpstan/phpstan": "^0.11.15",
     "phpstan/phpstan-phpunit": "^0.11",
     "phpstan/phpstan-strict-rules": "^0.11",
     "lexik/jwt-authentication-bundle": "^2.5"
+  },
+  "conflict": {
+    "symfony/framework-bundle": "<3.4.23"
   },
   "suggest": {
     "ext-imagick": "To assert images and create fixture images",
