--- a/composer.json
+++ b/composer.json
@@ -16,29 +16,26 @@
   "require": {
     "php": "~7.2",
     "ext-json": "*",
-    "dama/doctrine-test-bundle": "^5.0 || ^6.0",
+    "dama/doctrine-test-bundle": "^6.0",
     "doctrine/orm": "^2.6",
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.1",
     "phpunit/phpunit": "^8.0",
-    "coduo/php-matcher": "^3.1",
-    "symfony/browser-kit": "^3.4 || ^4.2",
-    "symfony/css-selector": "^3.4 || ^4.2"
+    "coduo/php-matcher": "^4.0",
+    "symfony/browser-kit": "^4.4 || ^5.0",
+    "symfony/css-selector": "^4.4 || ^5.0",
+    "symfony/framework-bundle": "^4.4 || ^5.0"
   },
   "require-dev": {
     "ext-imagick": "*",
-    "symfony/console": "^3.4 || ^4.2",
-    "symfony/security": "^3.4 || ^4.2",
-    "symfony/framework-bundle": "^3.4 || ^4.2",
+    "symfony/console": "^4.4 || ^5.0",
+    "symfony/security": "^4.4 || ^5.0",
     "mikey179/vfsstream": "^1.6",
     "doctrine/coding-standard": "^6.0",
     "phpstan/phpstan": "^0.11.15",
     "phpstan/phpstan-phpunit": "^0.11",
     "phpstan/phpstan-strict-rules": "^0.11",
     "lexik/jwt-authentication-bundle": "^2.5"
-  },
-  "conflict": {
-    "symfony/framework-bundle": "<3.4.23"
   },
   "suggest": {
     "ext-imagick": "To assert images and create fixture images",
