--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "doctrine/orm": "^2.6",
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.1",
-    "phpunit/phpunit": "^8.0",
+    "phpunit/phpunit": "^8.0|^9.0",
     "coduo/php-matcher": "^4.0",
     "symfony/browser-kit": "^4.4 || ^5.0",
     "symfony/css-selector": "^4.4 || ^5.0",
