--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "authors": [
     {
       "name": "Dragos Protung",
-      "email": "dragos@protung.ro"
+      "email": "dragos@protung.de"
     },
     {
       "name": "Cezary Stępkowski",
@@ -32,9 +32,9 @@
     "symfony/security": "^4.4 || ^5.0",
     "mikey179/vfsstream": "^1.6",
     "doctrine/coding-standard": "^6.0",
-    "phpstan/phpstan": "^0.12.10",
-    "phpstan/phpstan-phpunit": "^0.12.6",
-    "phpstan/phpstan-strict-rules": "^0.12.2",
+    "phpstan/phpstan": "^0.12.33",
+    "phpstan/phpstan-phpunit": "^0.12.12",
+    "phpstan/phpstan-strict-rules": "^0.12.3",
     "lexik/jwt-authentication-bundle": "^2.5"
   },
   "suggest": {
