--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
     }
   ],
   "require": {
-    "php": "~7.2",
+    "php": "~7.2 || ~8.0",
     "ext-json": "*",
     "dama/doctrine-test-bundle": "^6.0",
     "doctrine/orm": "^2.7",
     "doctrine/data-fixtures": "^1.4.1",
     "doctrine/doctrine-fixtures-bundle": "^3.1",
     "phpunit/phpunit": "^8.0|^9.0",
-    "coduo/php-matcher": "^5.0",
+    "coduo/php-matcher": "^5.0 || ^6.0",
     "symfony/browser-kit": "^4.4 || ^5.1",
     "symfony/css-selector": "^4.4 || ^5.1",
     "symfony/framework-bundle": "^4.4 || ^5.1"
@@ -31,7 +31,7 @@
     "symfony/console": "^4.4 || ^5.1",
     "symfony/security": "^4.4 || ^5.1",
     "mikey179/vfsstream": "^1.6",
-    "doctrine/coding-standard": "^6.0",
+    "doctrine/coding-standard": "^8.0",
     "phpstan/phpstan": "^0.12.54",
     "phpstan/phpstan-phpunit": "^0.12.16",
     "phpstan/phpstan-strict-rules": "^0.12.5",
