--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,17 +1,14 @@
+parameters:
+    level: max
+    paths:
+        - src
+        - tests
+    polluteScopeWithLoopInitialAssignments: true
+    reportUnmatchedIgnoredErrors: false
+
 includes:
+    - phpstan-baseline.neon
     - vendor/phpstan/phpstan-phpunit/extension.neon
     - vendor/phpstan/phpstan-strict-rules/rules.neon
-parameters:
-    polluteScopeWithLoopInitialAssignments: true
-    ignoreErrors:
-        - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeDefinition::children\(\)#'
-        - '#Call to method Imagick::newimage\(\) with incorrect case: newImage#'
-        - '#Call to method Imagick::setimageformat\(\) with incorrect case: setImageFormat#'
-        - '#Call to method Imagick::getimageblob\(\) with incorrect case: getImageBlob#'
-        - '#Call to method Imagick::readimageblob\(\) with incorrect case: readImageBlob#'
-        - '#Call to method Imagick::compareimages\(\) with incorrect case: compareImages#'
-        - '#Variable property access on object\.#'
-        - '#Call to function method_exists\(\) with Symfony\\Component\\Config\\Definition\\Builder\\TreeBuilder#'
-        - '#Class Symfony\\Component\\Config\\Definition\\Builder\\TreeBuilder does not have a constructor and must be instantiated without any parameters#'
-        - '#Call to an undefined method ReflectionProperty::getType\(\).#'
-    reportUnmatchedIgnoredErrors: false
+    - vendor/phpstan/phpstan-symfony/extension.neon
+    - vendor/phpstan/phpstan-symfony/rules.neon
