--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ main, 1.x, 2.x ]
+    branches: [ main, 2.x ]
   pull_request:
-    branches: [ main, 1.x, 2.x ]
+    branches: [ main, 2.x ]
 
 jobs:
   build:
@@ -13,7 +13,6 @@ jobs:
       matrix:
         dependencies: [lowest, highest]
         php-versions:
-          - 8.0
           - 8.1
     name: PHP ${{ matrix.php-versions }} checks with ${{ matrix.dependencies }} dependencies
     steps:
