--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
     }
   ],
   "require": {
-    "php": "~8.0.0 || ~8.1.0",
+    "php": "~8.1.0",
     "ext-json": "*",
-    "azjezz/psl": "^1.9.3",
+    "azjezz/psl": "^2.0.1",
     "coduo/php-matcher": "^6.0.7",
-    "dama/doctrine-test-bundle": "^6.7.5",
+    "dama/doctrine-test-bundle": "^7.0.0",
     "doctrine/data-fixtures": "^1.5.2",
     "doctrine/doctrine-fixtures-bundle": "^3.4",
     "doctrine/orm": "^2.7",
@@ -31,19 +31,22 @@
   "require-dev": {
     "ext-imagick": "*",
     "doctrine/coding-standard": "^9.0",
-    "ergebnis/composer-normalize": "^2.23",
+    "ergebnis/composer-normalize": "^2.26",
     "mikey179/vfsstream": "^1.6.10",
-    "php-standard-library/psalm-plugin": "^1.1",
-    "phpstan/phpstan": "^1.5.4",
-    "phpstan/phpstan-phpunit": "^1.0.0",
-    "phpstan/phpstan-strict-rules": "^1.1.0",
-    "phpstan/phpstan-symfony": "^1.1",
-    "psalm/plugin-phpunit": "^0.16",
-    "psalm/plugin-symfony": "^3.1",
+    "php-standard-library/psalm-plugin": "^2.0.2",
+    "phpstan/phpstan": "^1.6.8",
+    "phpstan/phpstan-phpunit": "^1.1.1",
+    "phpstan/phpstan-strict-rules": "^1.2.3",
+    "phpstan/phpstan-symfony": "^1.1.8",
+    "psalm/plugin-phpunit": "^0.16.1",
+    "psalm/plugin-symfony": "^3.1.5",
     "squizlabs/php_codesniffer": "^3.6.2",
-    "symfony/console": "^5.4",
-    "symfony/security-core": "^5.4",
-    "vimeo/psalm": "^4.20.0"
+    "symfony/console": "^5.4.8",
+    "symfony/security-core": "^5.4.8",
+    "vimeo/psalm": "^4.23.0"
+  },
+  "conflict": {
+    "nikic/php-parser": "<4.13.2"
   },
   "suggest": {
     "ext-imagick": "To assert images and create fixture images",
