--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -10,3 +10,7 @@ parameters:
 			count: 2
 			path: src/Test/KernelTestCase.php
 
+		-
+			message: "#^Unable to resolve the template type T in call to function Psl\\\\Regex\\\\first_match$#"
+			count: 1
+			path: src/Command/TestStubCreateCommand.php
