--- a/composer.json
+++ b/composer.json
@@ -23,28 +23,28 @@
     "doctrine/doctrine-fixtures-bundle": "^3.4",
     "doctrine/orm": "^2.7",
     "phpunit/phpunit": "^9.5",
-    "symfony/browser-kit": "^5.4",
-    "symfony/css-selector": "^5.4",
-    "symfony/dependency-injection": "^5.4",
-    "symfony/framework-bundle": "^5.4.1"
+    "symfony/browser-kit": "^5.4 || ^6.1",
+    "symfony/css-selector": "^5.4 || ^6.1",
+    "symfony/dependency-injection": "^5.4 || ^6.1",
+    "symfony/framework-bundle": "^5.4.1 || ^6.1"
   },
   "require-dev": {
     "ext-imagick": "*",
     "doctrine/coding-standard": "^9.0",
-    "ergebnis/composer-normalize": "^2.26",
-    "mikey179/vfsstream": "^1.6.10",
+    "ergebnis/composer-normalize": "^2.28.3",
+    "mikey179/vfsstream": "^1.6.11",
     "php-standard-library/psalm-plugin": "^2.0.2",
-    "phpstan/phpstan": "^1.6.8",
+    "phpstan/phpstan": "^1.8.2",
     "phpstan/phpstan-phpunit": "^1.1.1",
-    "phpstan/phpstan-strict-rules": "^1.2.3",
-    "phpstan/phpstan-symfony": "^1.1.8",
-    "psalm/plugin-phpunit": "^0.16.1",
-    "psalm/plugin-symfony": "^3.1.5",
-    "squizlabs/php_codesniffer": "^3.6.2",
-    "symfony/console": "^5.4.8",
-    "symfony/security-core": "^5.4.8",
+    "phpstan/phpstan-strict-rules": "^1.3.0",
+    "phpstan/phpstan-symfony": "^1.2.8",
+    "psalm/plugin-phpunit": "^0.17.0",
+    "psalm/plugin-symfony": "^3.1.8",
+    "squizlabs/php_codesniffer": "^3.7.1",
+    "symfony/console": "^5.4.8 || ^6.1",
+    "symfony/security-core": "^5.4.8 || ^6.1",
     "twig/twig": "^3.0.0",
-    "vimeo/psalm": "^4.23.0"
+    "vimeo/psalm": "^4.26.0"
   },
   "conflict": {
     "nikic/php-parser": "<4.13.2",
