--- a/composer.json
+++ b/composer.json
@@ -40,9 +40,11 @@
     "phpstan/phpstan-symfony": "^1.2.23",
     "psalm/plugin-phpunit": "^0.18.4",
     "psalm/plugin-symfony": "^5.0.1",
+    "roave/security-advisories": "dev-latest",
     "squizlabs/php_codesniffer": "^3.7.1",
     "symfony/console": "^5.4.8 || ^6.2.5",
     "symfony/security-core": "^5.4.8 || ^6.2.5",
+    "symfony/validator": "5.4.8 || ^6.2.5",
     "twig/twig": "^3.5.0",
     "vimeo/psalm": "^5.6"
   },
