--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     "doctrine/coding-standard": "^11.1.0",
     "ergebnis/composer-normalize": "^2.29",
     "mikey179/vfsstream": "^1.6.11",
+    "nesbot/carbon": "^2.66",
     "php-standard-library/psalm-plugin": "^2.2.1",
     "phpstan/phpstan": "^1.9.15",
     "phpstan/phpstan-phpunit": "^1.3.3",
@@ -77,7 +78,8 @@
       "dealerdirect/phpcodesniffer-composer-installer": true,
       "ocramius/package-versions": true,
       "ergebnis/composer-normalize": true
-    }
+    },
+    "sort-packages": true
   },
   "extra": {
     "branch-alias": {
