--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
     "spatie/pdf-to-text": "^1.52",
     "squizlabs/php_codesniffer": "^3.7.1",
     "symfony/console": "^5.4.8 || ^6.2.5",
+    "symfony/form": "5.4.8 || ^6.2.5",
     "symfony/security-core": "^5.4.8 || ^6.2.5",
     "symfony/validator": "5.4.8 || ^6.2.5",
     "twig/twig": "^3.5.0",
