--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "coduo/php-matcher": "^6.0.7",
     "dama/doctrine-test-bundle": "^6.7.5 || ^7.0.0",
     "doctrine/data-fixtures": "^1.6.3",
+    "doctrine/dbal": "^2.13.9 || ^3.5.0",
     "doctrine/doctrine-fixtures-bundle": "^3.4.2",
     "doctrine/orm": "^2.13",
     "phpunit/phpunit": "^9.6",
@@ -36,10 +37,10 @@
     "mikey179/vfsstream": "^1.6.11",
     "nesbot/carbon": "^2.66",
     "php-standard-library/psalm-plugin": "^2.2.1",
-    "phpstan/phpstan": "^1.10.9",
+    "phpstan/phpstan": "^1.10.11",
     "phpstan/phpstan-phpunit": "^1.3.11",
     "phpstan/phpstan-strict-rules": "^1.5.1",
-    "phpstan/phpstan-symfony": "^1.2.24",
+    "phpstan/phpstan-symfony": "^1.2.25",
     "psalm/plugin-phpunit": "^0.18.4",
     "psalm/plugin-symfony": "^5.0.2",
     "roave/security-advisories": "dev-latest",
