--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "symfony/framework-bundle": "^5.4.1 || ^6.2"
   },
   "require-dev": {
+    "ext-dom": "*",
     "ext-imagick": "*",
     "ext-intl": "*",
     "doctrine/coding-standard": "^11.1.0",
