--- a/composer.json
+++ b/composer.json
@@ -14,49 +14,48 @@
     }
   ],
   "require": {
-    "php": "~8.1.0 || ~8.2.0",
+    "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
     "ext-json": "*",
-    "azjezz/psl": "^2.3.1",
-    "coduo/php-matcher": "^6.0.7",
-    "dama/doctrine-test-bundle": "^6.7.5 || ^7.0.0",
-    "doctrine/data-fixtures": "^1.6.3",
-    "doctrine/dbal": "^2.13.9 || ^3.5.0",
-    "doctrine/doctrine-fixtures-bundle": "^3.4.2",
-    "doctrine/orm": "^2.13",
+    "azjezz/psl": "^2.5.0",
+    "coduo/php-matcher": "^6.0.13",
+    "dama/doctrine-test-bundle": "^6.7.5 || ^7.3.0 || ^8.0.1",
+    "doctrine/data-fixtures": "^1.7.0",
+    "doctrine/dbal": "^2.13.9 || ^3.7.0",
+    "doctrine/doctrine-fixtures-bundle": "^3.5.1",
+    "doctrine/orm": "^2.15.5",
     "phpunit/phpunit": "^9.6",
-    "symfony/browser-kit": "^5.4 || ^6.2",
-    "symfony/css-selector": "^5.4 || ^6.2",
-    "symfony/dependency-injection": "^5.4 || ^6.2",
-    "symfony/framework-bundle": "^5.4.1 || ^6.2"
+    "symfony/browser-kit": "^5.4 || ^6.4",
+    "symfony/css-selector": "^5.4 || ^6.4",
+    "symfony/dependency-injection": "^5.4 || ^6.4",
+    "symfony/framework-bundle": "^5.4.1 || ^6.4"
   },
   "require-dev": {
     "ext-dom": "*",
     "ext-imagick": "*",
     "ext-intl": "*",
     "doctrine/coding-standard": "^12.0.0",
-    "ergebnis/composer-normalize": "^2.33.0",
+    "ergebnis/composer-normalize": "^2.40.0",
     "mikey179/vfsstream": "^1.6.11",
-    "nesbot/carbon": "^2.68.1",
-    "php-standard-library/psalm-plugin": "^2.2.1",
-    "phpstan/phpstan": "^1.10.26",
-    "phpstan/phpstan-phpunit": "^1.3.13",
-    "phpstan/phpstan-strict-rules": "^1.5.1",
-    "phpstan/phpstan-symfony": "^1.3.2",
+    "nesbot/carbon": "^2.72.0",
+    "php-standard-library/psalm-plugin": "^2.3.0",
+    "phpstan/phpstan": "^1.10.48",
+    "phpstan/phpstan-phpunit": "^1.3.15",
+    "phpstan/phpstan-strict-rules": "^1.5.2",
+    "phpstan/phpstan-symfony": "^1.3.5",
     "psalm/plugin-phpunit": "^0.18.4",
-    "psalm/plugin-symfony": "^5.0.3",
+    "psalm/plugin-symfony": "^5.1.0",
     "roave/security-advisories": "dev-latest",
     "spatie/pdf-to-image": "^2.2.0",
     "spatie/pdf-to-text": "^1.52",
-    "squizlabs/php_codesniffer": "^3.7.2",
-    "symfony/console": "^5.4.8 || ^6.3.0",
-    "symfony/form": "5.4.8 || ^6.3.0",
-    "symfony/security-core": "^5.4.8 || ^6.3.0",
-    "symfony/validator": "5.4.8 || ^6.3.1",
-    "twig/twig": "^3.6.1",
-    "vimeo/psalm": "^5.13.1"
+    "squizlabs/php_codesniffer": "^3.8.0",
+    "symfony/console": "^5.4.8 || ^6.4.1",
+    "symfony/form": "5.4.8 || ^6.4.1",
+    "symfony/security-core": "^5.4.8 || ^6.4.0",
+    "symfony/validator": "5.4.8 || ^6.4.0",
+    "twig/twig": "^3.8.0",
+    "vimeo/psalm": "^5.17.0"
   },
   "conflict": {
-    "coduo/php-matcher": "6.0.12",
     "twig/twig": "<3.0.0"
   },
   "suggest": {
@@ -80,8 +79,8 @@
   "config": {
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true,
-      "ocramius/package-versions": true,
-      "ergebnis/composer-normalize": true
+      "ergebnis/composer-normalize": true,
+      "ocramius/package-versions": true
     },
     "sort-packages": true
   },
