--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,15 +9,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      SYMFONY_REQUIRE: ${{ matrix.symfony }}
     strategy:
       fail-fast: false
       matrix:
-        dependencies: [lowest, highest]
-        php-versions:
+        php:
           - 8.1
           - 8.2
           - 8.3
-    name: PHP ${{ matrix.php-versions }} checks with ${{ matrix.dependencies }} dependencies
+        symfony:
+          - 5.4.*
+          - 6.4.*
+          - 7.*
+        dependencies: [lowest, highest]
+        exclude:
+          - php: '8.1' # Symfony 7 requires >=8.2
+            symfony: 7.*
+    name: 'PHP ${{ matrix.php }} + Symfony ${{ matrix.symfony }} + ${{ matrix.dependencies }} dependencies'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,8 +34,9 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
-          coverage: xdebug
+          php-version: ${{ matrix.php }}
+          coverage: pcov
+          tools: flex
 
       - name: Get composer cache directory
         id: composer-cache
@@ -36,21 +46,19 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-php-${{ matrix.php }}-composer-${{ hashFiles('**/composer.json **/composer.lock') }}
-          restore-keys: ${{ runner.os }}-php-${{ matrix.php }}-composer-
+          key: ${{ runner.os }}-php-${{ matrix.php }}-symfony-${{ matrix.symfony }}-composer-${{ hashFiles('**/composer.json **/composer.lock') }}
+          restore-keys: ${{ runner.os }}-php-${{ matrix.php }}-symfony-${{ matrix.symfony }}-composer-
 
-      - name: Install lowest dependencies
-        if: ${{ matrix.dependencies == 'lowest' }}
-        run: composer update --prefer-lowest --prefer-dist --no-progress --no-suggest --no-interaction
+      # Remove optional dependencies incompatible with Symfony 7
+      - name: Remove symfony/messenger
+        if: ${{ matrix.symfony == '7.*' }}
+        run: composer remove --dev --no-update nesbot/carbon spatie/pdf-to-text
 
-      - name: Install highest dependencies
-        if: ${{ matrix.dependencies == 'highest' }}
-        run: composer update --prefer-dist --no-progress --no-suggest --no-interaction
+      - name: Install dependencies
+        uses: ramsey/composer-install@v2
+        with:
+          dependency-versions: ${{ matrix.dependencies }}
+          composer-options: --prefer-dist
 
-      - name: Run checks lowest
-        if: ${{ matrix.dependencies == 'lowest' }}
-        run: composer check
-
-      - name: Run checks highest
-        if: ${{ matrix.dependencies == 'highest' }}
+      - name: Run checks
         run: composer check
