--- a/composer.json
+++ b/composer.json
@@ -24,34 +24,33 @@
     "doctrine/doctrine-fixtures-bundle": "^3.5.1",
     "doctrine/orm": "^2.15.5",
     "phpunit/phpunit": "^9.6",
-    "symfony/browser-kit": "^5.4 || ^6.4",
-    "symfony/css-selector": "^5.4 || ^6.4",
-    "symfony/dependency-injection": "^5.4 || ^6.4",
-    "symfony/framework-bundle": "^5.4.1 || ^6.4"
+    "symfony/browser-kit": "^5.4 || ^6.4 || ^7.0",
+    "symfony/css-selector": "^5.4 || ^6.4 || ^7.0",
+    "symfony/dependency-injection": "^5.4 || ^6.4 || ^7.0",
+    "symfony/framework-bundle": "^5.4.1 || ^6.4 || ^7.0"
   },
   "require-dev": {
     "ext-dom": "*",
     "ext-imagick": "*",
     "ext-intl": "*",
     "doctrine/coding-standard": "^12.0.0",
-    "ergebnis/composer-normalize": "^2.40.0",
+    "ergebnis/composer-normalize": "^2.41.0",
     "mikey179/vfsstream": "^1.6.11",
     "nesbot/carbon": "^2.72.0",
     "php-standard-library/psalm-plugin": "^2.3.0",
-    "phpstan/phpstan": "^1.10.48",
+    "phpstan/phpstan": "^1.10.50",
     "phpstan/phpstan-phpunit": "^1.3.15",
     "phpstan/phpstan-strict-rules": "^1.5.2",
     "phpstan/phpstan-symfony": "^1.3.5",
     "psalm/plugin-phpunit": "^0.18.4",
     "psalm/plugin-symfony": "^5.1.0",
-    "roave/security-advisories": "dev-latest",
     "spatie/pdf-to-image": "^2.2.0",
     "spatie/pdf-to-text": "^1.52",
     "squizlabs/php_codesniffer": "^3.8.0",
-    "symfony/console": "^5.4.8 || ^6.4.1",
-    "symfony/form": "5.4.8 || ^6.4.1",
-    "symfony/security-core": "^5.4.8 || ^6.4.0",
-    "symfony/validator": "5.4.8 || ^6.4.0",
+    "symfony/console": "^5.4.8 || ^6.4.1 || ^7.0",
+    "symfony/form": "5.4.8 || ^6.4.1 || ^7.0.0",
+    "symfony/security-core": "^5.4.8 || ^6.4.0 || ^7.0.0",
+    "symfony/validator": "5.4.8 || ^6.4.0 || ^7.0",
     "twig/twig": "^3.8.0",
     "vimeo/psalm": "^5.17.0"
   },
@@ -63,8 +62,7 @@
     "mikey179/vfsstream": "To mock uploading large files",
     "spatie/pdf-to-image": "To test PDF files",
     "spatie/pdf-to-text": "To test PDF files",
-    "symfony/console": "To use command line tool to generate tests stubs",
-    "symfony/security-core": "To mock authentication"
+    "symfony/console": "To use command line tool to generate tests stubs"
   },
   "autoload": {
     "psr-4": {
