--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,9 +2,10 @@
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
          bootstrap="vendor/autoload.php"
-         colors="true"
+         failOnWarning="false"
+         failOnIncomplete="false"
          cacheResult="false"
-         verbose="true">
+         cacheDirectory=".phpunit.cache">
     <testsuites>
         <testsuite name="all">
             <directory>tests</directory>
