--- a/composer.json
+++ b/composer.json
@@ -15,28 +15,29 @@
   ],
   "require": {
     "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+    "ext-dom": "*",
     "ext-json": "*",
     "azjezz/psl": "^2.5.0",
-    "coduo/php-matcher": "^6.0.13",
-    "dama/doctrine-test-bundle": "^6.7.5 || ^7.3.0 || ^8.0.1",
+    "coduo/php-matcher": "^6.0.14",
+    "dama/doctrine-test-bundle": "^7.3.0 || ^8.0.1",
     "doctrine/data-fixtures": "^1.7.0",
-    "doctrine/dbal": "^2.13.9 || ^3.7.0",
+    "doctrine/dbal": "^3.7.0",
     "doctrine/doctrine-fixtures-bundle": "^3.5.1",
     "doctrine/orm": "^2.15.5",
-    "phpunit/phpunit": "^9.6",
-    "symfony/browser-kit": "^5.4 || ^6.4 || ^7.0",
-    "symfony/css-selector": "^5.4 || ^6.4 || ^7.0",
-    "symfony/dependency-injection": "^5.4 || ^6.4 || ^7.0",
-    "symfony/framework-bundle": "^5.4.1 || ^6.4 || ^7.0"
+    "phpunit/phpunit": "^10.5",
+    "symfony/browser-kit": "^6.4 || ^7.0",
+    "symfony/css-selector": "^6.4 || ^7.0",
+    "symfony/dependency-injection": "^6.4 || ^7.0",
+    "symfony/framework-bundle": "^6.4 || ^7.0"
   },
   "require-dev": {
-    "ext-dom": "*",
     "ext-imagick": "*",
     "ext-intl": "*",
     "doctrine/coding-standard": "^12.0.0",
-    "ergebnis/composer-normalize": "^2.41.0",
+    "ergebnis/composer-normalize": "^2.41.1",
     "mikey179/vfsstream": "^1.6.11",
-    "nesbot/carbon": "^2.72.0",
+    "moneyphp/money": "^4.0.0",
+    "nesbot/carbon": "^2.72.1",
     "php-standard-library/psalm-plugin": "^2.3.0",
     "phpstan/phpstan": "^1.10.50",
     "phpstan/phpstan-phpunit": "^1.3.15",
@@ -45,14 +46,14 @@
     "psalm/plugin-phpunit": "^0.18.4",
     "psalm/plugin-symfony": "^5.1.0",
     "spatie/pdf-to-image": "^2.2.0",
-    "spatie/pdf-to-text": "^1.52",
+    "spatie/pdf-to-text": "^1.52.1",
     "squizlabs/php_codesniffer": "^3.8.0",
-    "symfony/console": "^5.4.8 || ^6.4.1 || ^7.0",
-    "symfony/form": "5.4.8 || ^6.4.1 || ^7.0.0",
-    "symfony/security-core": "^5.4.8 || ^6.4.0 || ^7.0.0",
-    "symfony/validator": "5.4.8 || ^6.4.0 || ^7.0",
+    "symfony/console": "^6.4.1 || ^7.0.1",
+    "symfony/form": "^6.4.1 || ^7.0.1",
+    "symfony/security-core": "^6.4.0 || ^7.0.1",
+    "symfony/validator": "^6.4.0 || ^7.0",
     "twig/twig": "^3.8.0",
-    "vimeo/psalm": "^5.17.0"
+    "vimeo/psalm": "^5.18.0"
   },
   "conflict": {
     "twig/twig": "<3.0.0"
@@ -113,6 +114,6 @@
     ],
     "cs-check": "phpcs -p",
     "cs-fix": "phpcbf -p",
-    "test": "phpunit --testdox --color=always"
+    "test": "phpunit"
   }
 }
