--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "symfony/browser-kit": "^6.4 || ^7.0",
     "symfony/css-selector": "^6.4 || ^7.0",
     "symfony/dependency-injection": "^6.4 || ^7.0",
-    "symfony/framework-bundle": "^6.4 || ^7.0"
+    "symfony/framework-bundle": "^6.4 || ^7.0",
+    "symfony/polyfill-php83": "^1.29"
   },
   "require-dev": {
     "ext-imagick": "*",
